updated menu background

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 
   </div>
 
-<div class="container">
+<div class"container">
+
 
     <h1 class="menu">Menu</h1>
-    <p class="menu-text">* Everthing is per pound *</p>
-    <p class="menu-text">* Everything costs an extra $1 per pound to cook *</p>
+    <p class="menu-text">* Everthing is per pound *<br>
+                          * Everything costs an extra $1 per pound to cook * <br />
+                          * All fish, oysters, sausage, and alligator are only sold raw *</p>
+
 
 
   <div class="row">
@@ -77,7 +80,7 @@
 
 
 
-  </div>
+</div>
   </section>
   <div class="ordering">
     <h1>Contact</h1><br>
@@ -90,3 +93,4 @@
 </body>
 
 </html>
+
