--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2><em>Raw Gulf Shrimp</em></h2>
-            <img class="testimonial-image" src="C:\Users\samue\OneDrive\Documents\The Lou's Crawfish\images\shrimp3.jpg" alt="shrimp-img">
+            <img class="testimonial-image" src="https://github.com/Sam-Saia/Lou-s/blob/main/images/RawShrimp.jpg" alt="shrimp-img">
             <class="d-block w-100" alt="first slide">
           </div>
           <div class="carousel-item">
