--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2><em>Raw Gulf Shrimp</em></h2>
-            <img class="testimonial-image" src="C:\Users\samue\OneDrive\Documents\The Lou's Crawfish\images\shrimp3.jpg" alt="shrimp-img">
+            <img class="testimonial-image" src="images\shrimp3.jpg" alt="shrimp-img">
             <class="d-block w-100" alt="first slide">
           </div>
           <div class="carousel-item">
             <h2><em>Boiled crab Legs</em></h2>
-            <img class="testimonial-image" src="C:\Users\samue\OneDrive\Documents\The Lou's Crawfish\images\crab (2).jpg" alt="crab-img">
+            <img class="testimonial-image" src="images\crab (2).jpg" alt="crab-img">
             <class="d-block w-100" alt="second slide">
           </div>
           <div class="carousel-item">
             <h2><em>Boiled Crawfish</em></h2>
-            <img class="testimonial-image"src="C:\Users\samue\OneDrive\Documents\The Lou's Crawfish\images\cooked crawfish.jpg" alt="crawfish-img">
+            <img class="testimonial-image"src="images\cooked crawfish.jpg" alt="crawfish-img">
             <class="d-block w-100" alt="third slide">
           </div>
           <div class="carousel-item">
             <h2><em>Oysters</em></h2>
-            <img class="testimonial-image" src="C:\Users\samue\OneDrive\Documents\The Lou's Crawfish\images\oysters.jpg" alt="oyster-img">
+            <img class="testimonial-image" src="images\oysters.jpg" alt="oyster-img">
             <class="d-block w-100" alt="fourth slide">
           </div>
           <div class="carousel-item">
             <h2><em>Shrimp and Scallop Boil</em></h2>
-            <img class="testimonial-image" src="C:\Users\samue\OneDrive\Documents\The Lou's Crawfish\images\Shrimp and Scallops.jpg" alt="shrimp/scallop-img">
+            <img class="testimonial-image" src="images\Shrimp and Scallops.jpg" alt="shrimp/scallop-img">
             <class="d-block w-100" alt="fifth slide">
           </div>
         </div>
