--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="title-div">
     <h1 class="title-header">Lou's Crawfish</h1>
 
-    <p class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> staight from Louisiana.</p>
+    <p class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> staight from Louisiana.<br> Open Friday and Saturday from 10 - 6.</p>
   </div>
 
 
