--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
       <h1 class="menu">Menu</h1>
       <p class="menu-text">* Pricing is per pound *<br>
-        * Add $1 per pound to boiled shrimp, crab, and crawfish * <br /></p>
+        * Add $1 per pound to boiled shrimp, crab, and scallops * <br /></p>
 
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Crab</h1>
-        <p>Dungenous Crab - $28</p><br>
-        <p>Large Snow Crab - $27</p><br>
-        <p>Regular Snow - $23</p><br>
+        <p>Dungenous Crab - $22</p><br>
+        <p>Large Snow Crab - $22</p><br>
+        <p>Regular Snow - $15</p><br>
       </div>
 
       <div class="menu-divs col-lg-4 col-sm-6">
@@ -51,8 +51,8 @@
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Oysters</h1>
-        <p>Oysters By The Pound - $2</p>
-        <p>Oyster Sack - $80</p>
+        <p>Oysters By The Pound - $2.50</p>
+        <p>Oyster Sack - $95</p>
         <p>oyster Knife - Out Of Stock</p>
       </div>
 
