added imgur images

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/fa92ad8171.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/fa92ad8171.js" crossorigin="anonymous"></script>
 
   <link rel="icon" href="favicon (3).ico">
 
@@ -19,7 +19,7 @@
   <div class="title-div">
     <h1 class="title-header">Lou's Crawfish</h1>
 
-    <p class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> staight from Louisiana.</p>
+    <p class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> straight from Louisiana.</p>
   </div>
 
 
@@ -32,7 +32,7 @@
 
       <h1 class="menu">Menu</h1>
       <p class="menu-text">* Pricing is per pound *<br>
-        * Add $1 per pound to boiled shrimp, crab, and scallops * <br /></p>
+        * Add $1 per pound to boiled shrimp, crab, and crawfish * <br /></p>
 
 
       <div class="menu-divs col-lg-4 col-sm-6">
@@ -44,9 +44,9 @@
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Shrimp</h1>
-        <p>White Shrimp - $12.50</p><br>
-        <p>Brown Shrimp - $14.50</p><br>
-        <p>Argentina Red Shrimp - $14.50</p><br>
+        <p>White Shrimp - $13.50</p><br>
+        <p>Brown Shrimp - $13.50</p><br>
+        <p>Argentina Red Shrimp - $12.50</p><br>
       </div>
 
       <div class="menu-divs col-lg-4 col-sm-6">
@@ -59,26 +59,25 @@
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Fish</h1>
         <p>Grouper - $17.50</p><br>
-        <p>Red Snapper - $13.50</p><br>
+        <p>Red Snapper - $14.50</p><br>
         <p>Talapia - $4.75</p><br>
-        <p>Tuna - Idk</p><br>
-        <p>Barrumundi - Idk</p>
+        <p>Tuna - $18.75</p><br>
+        <p>Barrumundi - $12.50</p>
       </div>
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Crawfish</h1>
-        <p>Boiled Crawfish - Out Of Season</p><br>
-        <p>Live Crawfish - Out Of Season</p><br>
+        <p>Boiled Crawfish - Around $7 (changes weekly)</p><br>
+        <p>Live Crawfish - Around $4 (changes weekly)</p><br>
         <p>Frozen Crawfish - $3.25</p><br>
-        <p class="menu-text">Crawfish will be back in season some time in February</p>
       </div>
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Other</h1>
         <p>U-10 Sea Scallops - $21</p><br>
-        <p>Boudin Sasuage - $7.50</p><br>
+        <p>Boudin Sasuage - $9.75</p><br>
         <p>4 lb Seasoning - $6</p><br>
-        <p>Alligator - $13</p><br>
+        <p>Alligator - $14</p><br>
       </div>
     </div>
 
@@ -90,27 +89,27 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2><em>Raw Gulf Shrimp</em></h2>
-            <img class="testimonial-image"https://github.com/LousCrawfish/Lou-s/blob/main/images/shrimp3.jpg" alt="shrimp-img">
+            <img class="testimonial-image" src="https://i.imgur.com/wcABqlV_d.jpg?maxwidth=520&shape=thumb&fidelity=high" alt="rawshrimp-img">
             <class="d-block w-100" alt="first slide">
           </div>
           <div class="carousel-item">
-            <h2><em>Boiled crab Legs</em></h2>
-            <img class="testimonial-image" src="https://github.com/LousCrawfish/Lou-s/blob/main/images/crab%20(2).jpg" alt="crab-img">
+            <h2><em>Shrimp and Scallop Boil</em></h2>
+            <img class="testimonial-image" src="https://i.imgur.com/bU6atf0.jpeg" alt="crab-img">
             <class="d-block w-100" alt="second slide">
           </div>
           <div class="carousel-item">
             <h2><em>Boiled Crawfish</em></h2>
-            <img class="testimonial-image"src="cooked crawfish.jpg" alt="crawfish-img">
+            <img class="testimonial-image" src="https://i.imgur.com/ZmDZRdt.jpeg" alt="crawfish-img">
             <class="d-block w-100" alt="third slide">
           </div>
           <div class="carousel-item">
             <h2><em>Oysters</em></h2>
-            <img class="testimonial-image" src="oysters.jpg" alt="oyster-img">
+            <img class="testimonial-image" src="https://i.imgur.com/5PLgfQJ.jpeg" alt="oyster-img">
             <class="d-block w-100" alt="fourth slide">
           </div>
           <div class="carousel-item">
-            <h2><em>Shrimp and Scallop Boil</em></h2>
-            <img class="testimonial-image" src="Shrimp and Scallops.jpg" alt="shrimp/scallop-img">
+            <h2><em>Live Crawfish</em></h2>
+            <img class="testimonial-image" src="https://i.imgur.com/KekpySx.jpeg" alt="shrimp/scallop-img">
             <class="d-block w-100" alt="fifth slide">
           </div>
         </div>
@@ -137,7 +136,7 @@
     <h1>Contact Lou</h1><br>
     <h3>Number: (731)-616-2219</h3><br>
     <h3>Address: 669 Carriage House Dr Jackson, TN</h3><br>
-     <i class="fab fa-facebook"> - LouSaiaCrawfish</i>
+    <i class="fab fa-facebook"> - LouSaiaCrawfish</i>
 
   </div>
 
