--- a/index.html
+++ b/index.html
@@ -16,15 +16,39 @@
 </head>
 
 <body>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-danger ">
+    <a class="navbar-brand" href="">Lou's Crawfish</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#Home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Menu">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Contact">Contact</a>
+        </li>
+      </ul>
+  </nav>
+
+  <div class="header-div" id="Home">
+<h1 class="title-header">Lou's Crawfish</h1>
+  </div>
+
   <div class="title-div">
-    <h1 class="title-header">Lou's Crawfish</h1>
-
-    <p class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> straight from Louisiana.</p>
+    <h1 class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> straight from Louisiana.</h1>
+    <img src="images/craw-clip.png" class="craw-clip">
+    <img src="images/shrimp-clip.png" class="shrimp-clip">
+    <img src="images/crab-clip.png" class="crab-clip">
   </div>
 
 
-  </div>
-  <div class"container">
+  <div class"container" id="Menu">
 
 
 
@@ -32,7 +56,7 @@
 
       <h1 class="menu">Menu</h1>
       <p class="menu-text">* Pricing is per pound *<br>
-        * Add $1 per pound to boiled shrimp, crab, and crawfish * <br /></p>
+        * Add $1 per pound to boiled shrimp, crab, and scallops * <br /></p>
 
 
       <div class="menu-divs col-lg-4 col-sm-6">
@@ -53,7 +77,7 @@
         <h1 class="menu-headers">Oysters</h1>
         <p>Oysters By The Pound - $2.50</p>
         <p>Oyster Sack - $95</p>
-        <p>oyster Knife - Out Of Stock</p>
+        <p>Oyster Knife - Out Of Stock</p>
       </div>
 
       <div class="menu-divs col-lg-4 col-sm-6">
@@ -67,6 +91,7 @@
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Crawfish</h1>
+        <p class="menu-text">* Crawfish are only in season from January - July *</p>
         <p>Boiled Crawfish - Around $7 (changes weekly)</p><br>
         <p>Live Crawfish - Around $4 (changes weekly)</p><br>
         <p>Frozen Crawfish - $3.25</p><br>
@@ -132,7 +157,7 @@
 
   </div>
   </section>
-  <div class="ordering">
+  <div class="ordering" id="Contact">
     <h1>Contact Lou</h1><br>
     <h3>Number: (731)-616-2219</h3><br>
     <h3>Address: 669 Carriage House Dr Jackson, TN</h3><br>
