--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
   <div class="title-div">
     <h1 class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> straight from Louisiana.</h1>
-    <img src="images/craw-clip.png" class="craw-clip">
-    <img src="images/shrimp-clip.png" class="shrimp-clip">
-    <img src="images/crab-clip.png" class="crab-clip">
+    <img src="https://i.imgur.com/Tp5sT8N.png" class="craw-clip">
+    <img src="https://i.imgur.com/fIuN36m.png" class="shrimp-clip">
+    <img src="https://i.imgur.com/ozTndL5.png" class="crab-clip">
   </div>
 
 
