Added opening hours

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="title-div">
-    <h1 class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> straight from Louisiana.</h1>
+    <h1 class="title-text">Specializing in live, fresh, and fresh frozen seafood <br> straight from Louisiana.<br><br>Open Fridays and Saturdays 10:30a.m. - 6p.m.</h1>
     <img src="https://i.imgur.com/Tp5sT8N.png" class="craw-clip">
     <img src="https://i.imgur.com/fIuN36m.png" class="shrimp-clip">
     <img src="https://i.imgur.com/ozTndL5.png" class="crab-clip">
