Yo cambie mucho como cunta cuesta

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <a class="nav-link" href="#Menu">Menu</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#Photos">Photos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#Contact">Contact</a>
         </li>
       </ul>
@@ -61,22 +64,22 @@
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Crab</h1>
-        <p>Dungenous Crab - $22</p><br>
-        <p>Large Snow Crab - $22</p><br>
-        <p>Regular Snow - $15</p><br>
+        <p>Dungenous Crab - $23</p><br>
+        <p>Large Snow Crab - $23</p><br>
+        <p>Blue Crab - Around $5.50 (changes weekly)</p><br/>
       </div>
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Shrimp</h1>
-        <p>White Shrimp - $13.50</p><br>
-        <p>Brown Shrimp - $13.50</p><br>
+        <p>Wild Caught White Shrimp - $14.50</p><br>
+        <p>Easy Peel Shrimp - $9.50</p><br>
         <p>Argentina Red Shrimp - $12.50</p><br>
       </div>
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Oysters</h1>
-        <p>Oysters By The Pound - $2.50</p>
-        <p>Oyster Sack - $95</p>
+        <p>Oysters By The Pound - $2.75</p>
+        <p>Oyster Sack - $100</p>
         <p>Oyster Knife - Out Of Stock</p>
       </div>
 
@@ -99,7 +102,7 @@
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Other</h1>
-        <p>U-10 Sea Scallops - $21</p><br>
+        <p>U-10 Sea Scallops - $26</p><br>
         <p>Boudin Sasuage - $9.75</p><br>
         <p>4 lb Seasoning - $6</p><br>
         <p>Alligator - $14</p><br>
@@ -107,7 +110,9 @@
     </div>
 
 
-
+    <div class="button-div">
+      <a class="css-button" id="Photos">Photos</a>
+    </div>
 
     <div class="menu-pictures">
       <div id="menu-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -149,9 +154,6 @@
       </div>
     </div>
 
-    <div class="button-div">
-      <a class="css-button">Photos</a>
-    </div>
 
 
 
@@ -161,7 +163,7 @@
     <h1>Contact Lou</h1><br>
     <h3>Number: (731)-616-2219</h3><br>
     <h3>Address: 669 Carriage House Dr Jackson, TN</h3><br>
-    <i class="fab fa-facebook"> - LouSaiaCrawfish</i>
+    <h1><i class="fab fa-facebook"> - LouSaiaCrawfish</i></h1>
 
   </div>
 
