--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     <div class="row menu-div">
 
       <h1 class="menu">Menu</h1>
-      <p class="menu-text">* Pricing is per pound *<br>
+      <p class="menu-text">* Per Pound *<br>
         * Add $1 per pound to boiled shrimp, crab, and scallops * <br /></p>
 
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Crab</h1>
-        <p>Dungenous Crab - $23</p><br>
-        <p>Large Snow Crab - $23</p><br>
+        <p>Dungenous Crab - $22</p><br>
+        <p>Large Snow Crab - $22</p><br>
         <p>Blue Crab - Around $5.50 (changes weekly)</p><br/>
       </div>
 
@@ -102,6 +102,7 @@
 
       <div class="menu-divs col-lg-4 col-sm-6">
         <h1 class="menu-headers">Other</h1>
+        <p>Potatoes and Corn - $2 per serving</p><br>
         <p>U-10 Sea Scallops - $26</p><br>
         <p>Boudin Sasuage - $9.75</p><br>
         <p>4 lb Seasoning - $6</p><br>
@@ -164,11 +165,10 @@
     <h3>Number: (731)-616-2219</h3><br>
     <h3>Address: 669 Carriage House Dr Jackson, TN</h3><br>
     <h1><i class="fab fa-facebook"> - LouSaiaCrawfish</i></h1>
-
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="index.js" charset="utf-8"></script>
-</body>
 
+</body>
 </html>
